--- a/Web-Micro-Services/p14.md
+++ b/Web-Micro-Services/p14.md
@@ -1,1 +1,183 @@
+# Chapter 14: Designing a Microservice Diagram
+
+## Introduction
+
+Think of a **microservice diagram** like drawing a **map of a town**.
+Each microservice is like a **small shop**.
+Your map shows:
+
+* Which shop talks to which shop
+* What kind of goods (data) they exchange
+* How customers (users) move between them
+
+A good diagram makes the whole system easy to understand before writing any code.
+
+## Concepts
+
+* **Service** → A small independent module (like a shop).
+* **API** → The way services talk (like sending messages between shops).
+* **Data Flow** → What information is going from one place to another.
+* **Request/Response** → Asking a service to do something and getting an answer back.
+* **Diagram** → A simple sketch showing these connections.
+
+## Step-by-Step Explanation
+
+### 1. List the microservices
+
+Just write down all the “shops” you have.
+Example:
+
+* Auth Service
+* Product Service
+* Billing Service
+* Notification Service
+
+### 2. Identify who talks to whom
+
+Ask simple questions:
+
+* Who needs the login info? → Product? Billing?
+* Who creates an order? → Billing
+* Who sends SMS/Email? → Notification
+
+### 3. Draw simple arrows
+
+Arrows show the direction of communication.
+For example:
+
+**Auth → Product** means Product asks Auth, “Is this user valid?”
+
+### 4. Add the data flowing between them
+
+Use short labels:
+
+* “login check”
+* “product list”
+* “order status”
+* “payment done message”
+
+### 5. Keep the diagram simple
+
+Use boxes and arrows — nothing fancy.
+
+### 6. Add the API Gateway (if used)
+
+Gateway is like the main door through which all customers enter.
+
+## Simple Diagram (Text Format)
+
+```
+          +----------------+
+          |   API Gateway  |
+          +--------+-------+
+                   |
+                   v
+        +----------+-----------+
+        |      Auth Service    |
+        +----------+-----------+
+                   |
+                   v
+         +---------+---------+
+         |   Product Service |
+         +---------+---------+
+                   |
+                   v
+         +---------+---------+
+         |  Billing Service  |
+         +---------+---------+
+                   |
+                   v
+      +------------+-------------+
+      |    Notification Service  |
+      +---------------------------+
+```
+
+### Data Flow (Simple View)
+
+```
+User → Gateway → Auth → (User valid?)
+Auth → Product → (Give product list)
+User → Billing → (Place order)
+Billing → Notification → (Send SMS/Email)
+```
+
+This is enough to understand the whole system at a glance.
+
+## Code Examples (Simple)
+
+These are just small examples showing how one service calls another using FastAPI.
+
+### Product Service calling Auth Service
+
+```python
+import requests
+
+AUTH_URL = "http://auth-service/verify-token"
+
+def check_user(token):
+    response = requests.post(AUTH_URL, json={"token": token})
+    return response.json()
+```
+
+### Billing Service calling Notification Service
+
+```python
+import requests
+
+NOTIFY_URL = "http://notification-service/send"
+
+def send_message(user_id, text):
+    requests.post(NOTIFY_URL, json={
+        "user_id": user_id,
+        "message": text
+    })
+```
+
+## How Codex Helps
+
+Codex can:
+
+### ✓ Generate the initial diagram description
+
+You can say:
+**“Codex, draw a simple text microservice diagram with Auth, Product, Billing, Notification.”**
+
+### ✓ Create boilerplate API files
+
+Codex can create folders like:
+
+```
+auth/
+product/
+billing/
+notification/
+```
+
+### ✓ Add routes for communication
+
+You can ask:
+**“Add an API in Billing Service to call Notification Service.”**
+
+### ✓ Fix issues when one service cannot reach another
+
+Codex can debug:
+
+* wrong URLs
+* wrong JSON shape
+* missing headers
+
+## Small Exercise
+
+Create a simple text diagram for this system:
+
+* User Service
+* Order Service
+* Inventory Service
+* Notification Service
+
+Include:
+
+* Who talks to whom
+* What data flows between them
+
 
