--- a/Web-Micro-Services/p18.md
+++ b/Web-Micro-Services/p18.md
@@ -1,1 +1,215 @@
+# Chapter 18. API Security Made Simple
 
+## Introduction
+
+When you build a backend system, you don’t want just anyone to access your APIs.
+Just like a building needs a security guard, your API needs a simple way to check:
+
+* **Who are you?**
+* **Are you allowed to enter?**
+
+In this chapter, we will learn three simple and very common security methods:
+
+1. **JWT** → Like giving a visitor a temporary entry pass.
+2. **API Keys** → Like giving a shop owner a special door key.
+3. **OAuth** → Like using Google or Facebook login (basic idea only).
+
+We’ll keep everything very simple and practical.
+
+---
+
+## Concepts
+
+### 🔒 1. JWT (JSON Web Token)
+
+* A small digital “pass” given to a user after login.
+* The user sends it with every request.
+* The backend checks this pass before allowing access.
+
+### 🔑 2. API Keys
+
+* A fixed secret string (like a password for software).
+* Used for external apps, scheduled jobs, or services talking to each other.
+
+### 🌐 3. OAuth (Very Basic)
+
+* Login using Google/Facebook instead of creating your own login.
+* You redirect the user → Google checks → sends you a confirmation token.
+
+---
+
+## Step-by-step Explanation
+
+### ⭐ Part 1: How JWT Works (Easy Example)
+
+Think of logging into an office building:
+
+1. You show your ID → Security checks
+2. Security gives you a **visitor pass** (valid for a few hours)
+3. You show this pass whenever you re-enter a room
+
+In APIs:
+
+1. User logs in with email + password
+2. Backend creates a **JWT token**
+3. User includes the token in each request:
+
+   ```
+   Authorization: Bearer <token>
+   ```
+4. Backend verifies the token and allows the operation.
+
+---
+
+### ⭐ Part 2: API Keys (Easy Example)
+
+Imagine a courier company:
+
+* Each delivery boy gets a unique secret code card.
+* This card lets them access specific areas.
+
+API Keys work the same:
+
+* You create a key like:
+  `a934jkf93930ff-fd93kf30-992kdmS`
+* Clients send it in headers:
+
+  ```
+  x-api-key: <your-key>
+  ```
+* Backend checks if the key is valid.
+
+API Keys are great for:
+
+* Cron jobs
+* Another microservice calling you
+* Internal automation scripts
+
+---
+
+### ⭐ Part 3: OAuth (Basic Idea Only)
+
+Think of this like using your **Driving License** as an ID proof everywhere.
+
+You don’t create new IDs at each office.
+
+Flow:
+
+1. Your app says: “Go ask Google who you are”.
+2. User logs in on Google.
+3. Google sends your backend a confirmation code.
+4. Your backend uses that code to verify the person.
+
+This way, you don’t store passwords.
+
+We won't implement OAuth here — just understand the idea.
+
+---
+
+## Code Examples
+
+### 🔐 Example: Simple JWT Authentication (FastAPI)
+
+```python
+from fastapi import FastAPI, Depends, HTTPException
+from fastapi.security import OAuth2PasswordBearer
+import jwt
+
+app = FastAPI()
+oauth2_scheme = OAuth2PasswordBearer(tokenUrl="login")
+SECRET_KEY = "MYSECRET"
+
+# Fake user
+USER = {"email": "test@example.com", "password": "1234"}
+
+@app.post("/login")
+def login(email: str, password: str):
+    if email == USER["email"] and password == USER["password"]:
+        token = jwt.encode({"email": email}, SECRET_KEY, algorithm="HS256")
+        return {"token": token}
+    raise HTTPException(status_code=401, detail="Invalid credentials")
+
+@app.get("/profile")
+def profile(token: str = Depends(oauth2_scheme)):
+    try:
+        data = jwt.decode(token, SECRET_KEY, algorithms=["HS256"])
+        return {"message": "Welcome!", "email": data["email"]}
+    except:
+        raise HTTPException(status_code=401, detail="Token invalid")
+```
+
+---
+
+### 🔑 Example: API Key Middleware (Very Simple)
+
+```python
+from fastapi import FastAPI, Request, HTTPException
+
+app = FastAPI()
+VALID_KEY = "12345-SECRET"
+
+@app.middleware("http")
+async def check_api_key(request: Request, call_next):
+    key = request.headers.get("x-api-key")
+
+    if request.url.path.startswith("/public"):
+        return await call_next(request)
+
+    if key != VALID_KEY:
+        raise HTTPException(status_code=401, detail="Invalid API key")
+
+    return await call_next(request)
+
+@app.get("/secure-data")
+def secure():
+    return {"data": "Secret info"}
+```
+
+---
+
+## How Codex Helps
+
+Codex can help you a lot with security tasks:
+
+### ✔ Generate JWT login endpoints
+
+“Codex, create a FastAPI login endpoint that returns a JWT token.”
+
+### ✔ Create middleware for API Key checks
+
+“Codex, add API key validation to my service.”
+
+### ✔ Fix bugs in token verification
+
+“Codex, decode this JWT token and tell me what's wrong.”
+
+### ✔ Expand folder structure
+
+“Codex, generate an auth folder with routers, schemas, and utils.”
+
+### ✔ Add refresh token logic
+
+“Codex, add refresh token generation logic in auth_utils.py.”
+
+Codex can write most of the repetitive code automatically.
+
+---
+
+## Small Exercise
+
+**Task:**
+Create a new small FastAPI project with:
+
+1. One public route:
+   `/hello`
+2. One protected route using JWT:
+   `/dashboard`
+3. A login endpoint that returns a JWT token.
+
+**Bonus:**
+Add API Key validation for an admin-only route:
+`/admin/stats`
+
+Try to let Codex generate pieces step-by-step.
+
+---
